force-app/main/default/objects/Employer__c/fields/Average_Salary__c.field-meta.xml
<CustomField>
    <fullName>Average_Salary__c</fullName>
    <formula>Sum_of_Employee_Salary__c  /  Count_Of_Employee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>