force-app/main/default/objects/Employer__c/fields/Count_Of_Employee__c.field-meta.xml
<CustomField>
    <fullName>Count_Of_Employee__c</fullName>
    <label>Count Of Employee</label>
    <summaryForeignKey>Employee__c.Employer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>