force-app/main/default/objects/Employer__c/fields/Sum_of_Employee_Salary__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Employee_Salary__c</fullName>
    <label>Sum of Employee Salary</label>
    <summarizedField>Employee__c.Salary__c</summarizedField>
    <summaryForeignKey>Employee__c.Employer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>